--- a/src/app/[city]/page.css
+++ b/src/app/[city]/page.css
@@ -273,6 +273,11 @@
     align-items: center;
 }
 
+.tablaDias > tbody > tr > td:nth-child(4) > div > img {
+    width: 20px;
+    height: 20px;
+}
+
 @media (min-width: 1280px) and (max-width: 1620px){
     .informacionDerecha{
         grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -330,19 +335,20 @@
     
     .tablaDias > tbody > tr > td:first-child {
         font-size: 12px;
+        width: 20px;
     }
 
     .tablaDias > tbody > tr > td:nth-child(2) > div{
         font-size: 10px;
         gap:5px;
-        width: 30px;
+        width: 40px;
     }
     
     .tablaDias > tbody > tr > td:nth-child(2) > div >img{
         width: 8px;
         height: 8px;
     }
-
+    
     .tablaDias > tbody > tr > td:nth-child(3) > div >img{
         width: 16px;
         height: 16px;
